--- a/one.html
+++ b/one.html
@@ -13,6 +13,35 @@
     <h3>h3</h3>
     <h4>h4</h4>
     <h5>h5</h5>
-    <h1>h6</h1>
+    <h6>h6</h6>
+    <H4>水平線</H4>
+    <hr>
+    <hr>
+    <!-- 註解 -->
+    <h4>段落</h4>
+    第一行段落
+    <br>
+    第二行段落
+    <p>第一行段落</p>
+    <p>第二行段落</p>
+    <hr>
+    <h4>標籤</h4>
+    <span style="color:red"> Lorem ipsum dolor sit amet consectetur adipisicing elit </span> . Eveniet repellat ad sit aliquam blanditiis velit, maxime placeat culpa saepe facere molestias dicta totam, quis quo minima ipsum similique aut. Odio!
+    Cupiditate reiciendis est saepe repellendus possimus mollitia molestiae quia, a, eligendi illum dolorem ratione obcaecati accusantium eaque voluptates eius, impedit eos quaerat quos. Repellendus quasi praesentium adipisci dolorem id fuga.
+    Non exercitationem velit, aliquid laboriosam, nobis at ad facere voluptatum quam laborum voluptas numquam. Beatae optio natus, omnis labore explicabo tenetur quidem, iusto placeat quo maiores dignissimos aspernatur ea animi.
+    <hr>
+    <h4>格式化段落</h4>
+    <pre>
+        123456
+    </pre>
+    <hr>
+    <h4>文字格式化</h4>
+    <b>租體標籤</b>
+    <i>斜體標籤</i>
+    <sub>下標標籤</sub>
+    <sup>上標標籤</sup>
+    <ins>新增標籤</ins>
+    <del>刪除標籤</del>
+     <mark>標籤</mark>
 </body>
 </html>
