--- a/one.html
+++ b/one.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>標題</h4>
+    <h4 id="up">標題</h4>
     <h1>h1</h1>
     <h2>h2</h2>
     <h3>h3</h3>
@@ -43,5 +43,33 @@
     <ins>新增標籤</ins>
     <del>刪除標籤</del>
      <mark>標籤</mark>
+     <hr>
+     <h4>超連結</h4>
+     <a href="https://www.nutc.edu.tw">國立台中科技大學</a>
+     <!-- 另開分頁 -->
+     <a href="https://www.nutc.edu.tw" target="_blank">國立台中科技大學</a>
+     <h4>錨點</h4>
+     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+     <a href="#up">移到最上面</a>
+     <hr>
+     <h4>圖片</h4>
+     <img src="808375.png" alt="" width="100" height="100">
+     <img src="https://cdn-icons-png.flaticon.com/512/808/808375.png" >
+     <hr>
+     <h4>ul li 標籤</h4>
+     <ul> 
+        <li>001</li>
+        <li>002</li>
+        <li>003</li>
+        <li>004</li>
+        <li>005</li>
+     </ul>
+     <ol>
+        <li>001</li>
+        <li>002</li>
+        <li>003</li>
+        <li>004</li>
+        <li>005</li>
+     </ol>
 </body>
 </html>
