--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <br>
     <a href="one.html">html元素</a>
     <br>
-    <a href="table.html">htmlm表格</a>
+    <a href="1.html">htmlm表格</a>
 </body>
 </html>
