--- a/one.html
+++ b/one.html
@@ -7,105 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    <h4 id="up">標題</h4>
-    <h1>h1</h1>
-    <h2>h2</h2>
-    <h3>h3</h3>
-    <h4>h4</h4>
-    <h5>h5</h5>
-    <h6>h6</h6>
-    <H4>水平線</H4>
-    <hr>
-    <hr>
-    <!-- 註解 -->
-    <h4>段落</h4>
-    第一行段落
-    <br>
-    第二行段落
-    <p>第一行段落</p>
-    <p>第二行段落</p>
-    <hr>
-    <h4>標籤</h4>
-    <span style="color:red"> Lorem ipsum dolor sit amet consectetur adipisicing elit </span> . Eveniet repellat ad sit aliquam blanditiis velit, maxime placeat culpa saepe facere molestias dicta totam, quis quo minima ipsum similique aut. Odio!
-    Cupiditate reiciendis est saepe repellendus possimus mollitia molestiae quia, a, eligendi illum dolorem ratione obcaecati accusantium eaque voluptates eius, impedit eos quaerat quos. Repellendus quasi praesentium adipisci dolorem id fuga.
-    Non exercitationem velit, aliquid laboriosam, nobis at ad facere voluptatum quam laborum voluptas numquam. Beatae optio natus, omnis labore explicabo tenetur quidem, iusto placeat quo maiores dignissimos aspernatur ea animi.
-    <hr>
-    <h4>格式化段落</h4>
-    <pre>
-        123456
-    </pre>
-    <hr>
-    <h4>文字格式化</h4>
-    <b>租體標籤</b>
-    <i>斜體標籤</i>
-    <sub>下標標籤</sub>
-    <sup>上標標籤</sup>
-    <ins>新增標籤</ins>
-    <del>刪除標籤</del>
-     <mark>標籤</mark>
-     <hr>
-     <h4>超連結</h4>
-     <a href="https://www.nutc.edu.tw">國立台中科技大學</a>
-     <!-- 另開分頁 -->
-     <a href="https://www.nutc.edu.tw" target="_blank">國立台中科技大學</a>
-     <h4>錨點</h4>
-     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-     <a href="#up">移到最上面</a>
-     <hr>
-     <h4>圖片</h4>
-     <img src="808375.png" alt="" width="100" height="100">
-     <img src="https://cdn-icons-png.flaticon.com/512/808/808375.png" >
-     <hr>
-     <h4>ul li 標籤</h4>
-     <ul> 
-        <li>001</li>
-        <li>002</li>
-        <li>003</li>
-        <li>004</li>
-        <li>005</li>
-     </ul>
-     <ol>
-        <li>001</li>
-        <li>002</li>
-        <li>003</li>
-        <li>004</li>
-        <li>005</li>
-     </ol>
-     <hr>
-     <h4>input輸入</h4>
-     張號:<input type="text">
-     密碼:<input type="password">
-     輸入數字: <input type="number" min="0" max="10"
-                 onkeyup="if(value<0)
-                            value=0
-                         else if(value>10)
-                            value=10
-                            " >
-    <br>
-     複選:
-     <input type="checkbox"> 看書
-     <input type="checkbox">旅行
-     <br>
-     單選:
-     <input type="radio" name="sex">男生
-     <input type="radio" name="sex">女生
-     <br>
-     按妞:
-     <input type="button" value=" 按妞">
-     <input type="submit" value=" 按妞2">
-     <button> 按妞3</button>
-     <br>
-     日期:
-     <input type="date" min="2022-10-01" max="2022-10-31">
-     <br>
-     時間:
-     <input type="time">
-     <br>
-     檔案上傳:
-     <input type="file">
-     <br>
-     <h4>html實體</h4>
-     &copy;
-               
+    <table border="1" width="300" align="center" >
+        <tr>
+            <td colspan="2" align="center">我的最愛 </td>
+        </tr>
+        <tr>
+            <td align="center">超連結名稱</td>
+            <td align="center">連結網址</td>
+        </tr>
+        <tr>
+            <td>Google</td>
+            <td>
+                <a href="https://www.google.com.tw/">
+                    google
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td>Youtube</td>
+            <td>
+                <a href="https://www.youtube.com/">
+                    Youtube
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td>Pchome</td>
+            <td>
+                <a href="https://shopping.pchome.com.tw/">
+                    Pchome
+                </a>
+            </td>
+
+    </table>
 </body>
 </html>
