--- a/two.html
+++ b/two.html
@@ -7,34 +7,40 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1" width="300" align="center" >
+    <table border="1" width="500" align="center">
         <tr>
-            <td colspan="4" align="center">購物車</td>
+            <td colspan="3" align="center">我的個人資料</td>
         </tr>
         <tr>
-            <td rowspan="2">名稱</td>
-            <td colspan="2">2021-11-02</td>
-            <td rowspan="2">小計</td>
+            <td align="center">班級</td>
+            <td>休閒一A</td>
+            <td rowspan="7" width="200">
+                <img src="https://fakeimg.pl/200x200/00CED1/">
+            </td>    
         </tr>
         <tr>
-            <td>重量</td>
-            <td>單價</td>
+            <td align="center">姓名</td>
+            <td>林清玄</td>
         </tr>
         <tr>
-            <td>蘋果</td>
-            <td>3公斤</td>
-            <td>5元/公斤</td>
-            <td>15元</td>
+            <td align="center">學號</td>
+            <td>s3411107031</td>
         </tr>
         <tr>
-            <td>芭樂</td>
-            <td>10公斤</td>
-            <td>2元/公斤</td>
-            <td>20元</td>
+            <td align="center">就讀學校</td>
+            <td>
+                <a href="https://www.nutc.edu.tw/bin/home.php">國立科技大學 </a> 
+            </td>
         </tr>
         <tr>
-            <td colspan="3">總計</td> 
-            <td>35元</td>
+            <td rowspan="3" align="center">專長</td>
+            <td>網頁設計</td>
+        </tr>
+        <tr>
+            <td>國際禮儀</td>
+        </tr>
+        <tr>
+            <td>管理學</td>
         </tr>
     </table>
 </body>
