--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <a href="one.html">html元素</a>
     <br>
     <a href="1.html">htmlm表格</a>
+    <br>
+    <a href="css.html">css選擇器</a>
+    <br>
+    <a href="background.html">background背景</a>
 </body>
 </html>
