--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <br>
     <a href="css.html">css選擇器</a>
     <br>
-    <a href="background.html">background背景</a>
+    <a href="background.html">背景</a>
 </body>
 </html>
